操作数据库

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#配置驱动
+spring.datasource.driver-class-name=org.sqlite.JDBC
+#配置数据库地址
+spring.datasource.url=jdbc:sqlite:G:/Data/test.db
+
+//只要增加这个2行，spring boot运行时就会帮我们自己连接数据库了，我们就无需关心怎么连接数据库的问题。
+
 
