--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,24 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+
+
+
 	<dependencies>
+		<!-- mybatis 框架-->
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
+
+		<!-- SQLite 驱动 -->
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.21.0.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
