JAVA 入门 增删改查  java 操作mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 #配置驱动
-spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #配置数据库地址
-spring.datasource.url=jdbc:sqlite:G:\\Data\\test.db
+spring.datasource.url=jdbc:mysql://localhost:3306/my_test?serverTimezone=UTC
+#配置mysql账号
+spring.datasource.username=root
+#配置mysql密码
+spring.datasource.password=123456
 
-#只要增加这个2行，spring boot运行时就会帮我们自己连接数据库了，我们就无需关心怎么连接数据库的问题。
 
 
