--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #ÅäÖÃÇı¶¯
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #ÅäÖÃÊı¾İ¿âµØÖ·
 spring.datasource.url=jdbc:mysql://localhost:3306/my_test?serverTimezone=UTC
 #ÅäÖÃmysqlÕËºÅ
