动态生产 mySql语句

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,12 @@ spring.datasource.username=root
 #配置mysql密码
 spring.datasource.password=123456
 
+#xml文件的位置
+mybatis.mapperLocations: classpath:/mapper/**/*.xml
+#输出日志
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+
 
 
