--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #ÅäÖÃÇı¶¯
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #ÅäÖÃÊı¾İ¿âµØÖ·
-spring.datasource.url=jdbc:mysql://localhost:3306/my_test?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/person?serverTimezone=UTC
 #ÅäÖÃmysqlÕËºÅ
 spring.datasource.username=root
 #ÅäÖÃmysqlÃÜÂë
